crashed fixed by added match instead of unwrap.
fs::metadata  not available for /proc/{proc_id}/task/{task_id}/fdinfo/36

--- a/src/styles.css
+++ b/src/styles.css
@@ -272,6 +272,7 @@ progress{
 .menu li {
   /* background-color: black; */
   cursor: pointer;
+  padding: 0.5rem;
 }
 
 .menu li:hover {
